update guide Arbitrum DAO

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -11,3 +11,4 @@ guides:
   - running-a-validator-arbitrum-university-967.yaml
   - arbitrum-tools-arbitrum-university-530.yaml
   - arbitrum-vs-ethereum-arbitrum-university-172.yaml
+  - arbitrum-dao-arbitrum-university-613.yaml
