--- a/src/guides/main/arbitrum-dao-arbitrum-university-613.yaml
+++ b/src/guides/main/arbitrum-dao-arbitrum-university-613.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the workings of the Arbitrum DAO
-created: '2023-11-14T16:40:49.814Z'
+created: '2023-11-14T16:45:01.945Z'
 guideType: onboarding
 key: arbitrum-dao-arbitrum-university-613
 name: Arbitrum DAO
@@ -129,7 +129,7 @@ steps:
         explanation: Explanation of the question
     uuid: 6cc8edfb-d101-4053-bac3-419b9352d568
   - content: >-
-      ## How does it work?
+      ## Governance Structure
 
       The governance framework of the Arbitrum Rollup protocol is structured
       around the Arbitrum DAO and the Security Council:
@@ -180,8 +180,35 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 227d10ac-a52f-4b51-bd19-beac530b6dfd
-  - content: |
-      ## Web3 User Layer
+  - content: >
+      ## Web3 Layers
+
+      Imagine Arbitrum's stakeholders as a hierarchy of support layers, with the
+      web3 user layer at the top:
+
+
+      1. **Web3 User Layer**: This is where users interact with decentralized
+      applications (dApps).
+
+      2. **Web3 App Layer**: Here, you have the innovators and developers
+      creating the dApps and tools needed for the web3 ecosystem.
+
+      3. **Layer 2 (L2)**: This layer is made up of the Arbitrum DAO, its
+      community, node operators, sequencers, and companies like Offchain Labs,
+      all working to advance Ethereum's rollup-based future.
+
+      4. **Layer 1 (L1)**: Encompasses the base layers of Ethereum's blockchain.
+
+      5. **Consensus Layer (CL)**: Teams like Prysm contribute here, maintaining
+      the agreement protocol of Ethereum's beacon chain.
+
+      6. **Execution Layer (EL)**: Involves groups like Geth who develop the
+      software that executes blockchain transactions.
+
+      7. **Research Layer**: This includes experts focused on the latest
+      developments in cryptography, economic system design, and governance
+      models.
+
 
       ## Participation Options
     name: ' Arbitrum Stakeholders'
