update guide Arbitrum Governance

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -12,3 +12,4 @@ guides:
   - arbitrum-tools-arbitrum-university-530.yaml
   - arbitrum-vs-ethereum-arbitrum-university-172.yaml
   - arbitrum-dao-arbitrum-university-613.yaml
+  - arbitrum-governance-arbitrum-university-791.yaml
