--- a/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
+++ b/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into the Arbitrum Governance Sructure
-created: '2023-11-14T17:52:54.619Z'
+created: '2023-11-14T18:04:17.208Z'
 guideType: onboarding
 key: arbitrum-governance-arbitrum-university-791
 name: Arbitrum Governance
@@ -204,8 +204,56 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: d7a04223-527f-4c9f-b8df-02956a1e0eba
-  - content: |
-      ## What does the security council do 
+  - content: >
+      The Security Council's dual capacity for immediate action in emergencies
+      and methodical upgrades in non-critical situations ensures the network's
+      stability and responsiveness to threats, all while remaining accountable
+      to the Arbitrum DAO's governance structure.
+
+
+      ## Emergency Protocol Upgrades
+
+
+      **Function:** The Security Council can swiftly implement protocol upgrades
+      in emergencies, bypassing the standard governance process.
+
+      **Purpose:** Immediate action in case of critical vulnerabilities, without
+      publicizing sensitive information in the DAO's governance forum.
+
+      **Authority:** Empowered to act directly and expediently to apply urgent
+      fixes, safeguarding the protocol's integrity.
+
+
+      ## Governance and Oversight
+
+
+      **Transparency:** The Security Council is obliged to adhere to the
+      Arbitrum DAO Constitution and to provide transparency reports post-action.
+
+      **Accountability:** Members are elected by the DAO through semi-annual
+      elections, ensuring that the council acts in the network's best interests.
+
+
+      ## Routine Upgrades
+
+
+      **Scope:** Non-critical updates such as software maintenance and minor
+      improvements.
+
+      **Process:** These upgrades are subject to a delay period, allowing users
+      the choice to withdraw if they disagree with the changes.
+
+
+      ## Resources
+
+
+      **Documentation:** Detailed information about the Security Council's
+      operations and guidelines can be found in the Security Council concept
+      doc.
+
+      **Constitutional Role:** The formal responsibilities and limits of the
+      Security Council are outlined in The Constitution of the Arbitrum DAO. 
+
 
       ## Way forward 
     name: Security Council
