--- a/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
+++ b/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into the Arbitrum Governance Sructure
-created: '2023-11-14T18:05:33.052Z'
+created: '2023-11-14T18:06:59.572Z'
 guideType: onboarding
 key: arbitrum-governance-arbitrum-university-791
 name: Arbitrum Governance
@@ -216,50 +216,37 @@ steps:
       ### Emergency Protocol Upgrades
 
 
-      **Function:** The Security Council can swiftly implement protocol upgrades
-      in emergencies, bypassing the standard governance process.
-
-
-      **Purpose:** Immediate action in case of critical vulnerabilities, without
-      publicizing sensitive information in the DAO's governance forum.
-
-
-      **Authority:** Empowered to act directly and expediently to apply urgent
-      fixes, safeguarding the protocol's integrity.
+      The Security Council can swiftly implement protocol upgrades in
+      emergencies, bypassing the standard governance process. Immediate action
+      in case of critical vulnerabilities, without publicizing sensitive
+      information in the DAO's governance forum. Empowered to act directly and
+      expediently to apply urgent fixes, safeguarding the protocol's integrity.
 
 
       ### Governance and Oversight
 
 
-      **Transparency:** The Security Council is obliged to adhere to the
-      Arbitrum DAO Constitution and to provide transparency reports post-action.
-
-
-      **Accountability:** Members are elected by the DAO through semi-annual
-      elections, ensuring that the council acts in the network's best interests.
+      The Security Council is obliged to adhere to the Arbitrum DAO Constitution
+      and to provide transparency reports post-action. Members are elected by
+      the DAO through semi-annual elections, ensuring that the council acts in
+      the network's best interests.
 
 
       ### Routine Upgrades
 
 
-      **Scope:** Non-critical updates such as software maintenance and minor
-      improvements.
-
-
-      **Process:** These upgrades are subject to a delay period, allowing users
-      the choice to withdraw if they disagree with the changes.
+      Non-critical updates such as software maintenance and minor improvements.
+      These upgrades are subject to a delay period, allowing users the choice to
+      withdraw if they disagree with the changes.
 
 
       ### Resources
 
 
-      **Documentation:** Detailed information about the Security Council's
-      operations and guidelines can be found in the Security Council concept
-      doc.
-
-
-      **Constitutional Role:** The formal responsibilities and limits of the
-      Security Council are outlined in The Constitution of the Arbitrum DAO. 
+      Detailed information about the Security Council's operations and
+      guidelines can be found in the Security Council concept doc. The formal
+      responsibilities and limits of the Security Council are outlined in The
+      Constitution of the Arbitrum DAO. 
 
 
       ## Way forward 
