update guide Delegation

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -13,3 +13,4 @@ guides:
   - arbitrum-vs-ethereum-arbitrum-university-172.yaml
   - arbitrum-dao-arbitrum-university-613.yaml
   - arbitrum-governance-arbitrum-university-791.yaml
+  - delegation-arbitrum-university-615.yaml
