--- a/src/guides/main/delegation-arbitrum-university-615.yaml
+++ b/src/guides/main/delegation-arbitrum-university-615.yaml
@@ -1,23 +1,44 @@
 categories: []
 content: Representatives for token holders in Arbitrum DAO
-created: '2023-11-14T18:17:47.788Z'
+created: '2023-11-14T18:24:46.747Z'
 guideType: onboarding
 key: delegation-arbitrum-university-615
 name: Delegation
 publishStatus: Live
 steps:
-  - content: |-
+  - content: >-
       ## What is a Delegate?
+
+      A delegate within the Arbitrum DAO plays a vital role in the governance
+      process, acting as a proxy for token holders who may not have the time or
+      inclination to participate in the frequent and often complex
+      decision-making processes. These delegates are entrusted by token holders
+      who willingly transfer their voting rights, empowering the delegate to act
+      on their behalf in the governance of the Arbitrum ecosystem. To become a
+      delegate, one must be elected by the community of $ARB token holders, a
+      process that reflects the trust and expectations of the electorate. Once
+      in position, delegates are not only expected to vote on proposals but also
+      to engage actively in discussions, represent the interests of their
+      constituents, and contribute to the strategic direction of Arbitrum.
+
+
+      The role of a delegate is bound by the Constitution of the Arbitrum DAO,
+      which outlines the ethical and procedural guidelines to ensure that their
+      actions are transparent and aligned with the collective will of the token
+      holders they represent. The Constitution ensures that the governance of
+      Arbitrum remains fair, systematic, and consistent with the community's
+      values. Token holders who delegate their votes maintain the right to
+      oversee their delegate's decisions and can withdraw their delegation at
+      any point. This mechanism ensures that delegates remain accountable to
+      their constituents, who can reclaim their direct voting power to influence
+      specific proposals that they feel strongly about.
+
 
       ## Benefits of being a delegate 
 
               
     name: Introduction to Delegates
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: 4b027233-1e12-41eb-9d26-8c7ba64affc0
+    stepItems: []
     uuid: bd65300c-703e-439a-991d-d04a6720d7cb
   - content: ''
     name: Evaluation
@@ -62,6 +83,6 @@ steps:
     uuid: 273220b6-9656-4c99-99cf-acb291ae1a1e
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 7a8523be-dbc5-4456-8599-ec37be083896
+uuid: delegation-arbitrum-university-615
 version: 1
 priority: 50
