update guide Delegation

--- a/src/guides/main/delegation-arbitrum-university-615.yaml
+++ b/src/guides/main/delegation-arbitrum-university-615.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Representatives for token holders in Arbitrum DAO
-created: '2023-11-14T18:24:46.747Z'
+created: '2023-11-15T11:35:50.926Z'
 guideType: onboarding
 key: delegation-arbitrum-university-615
 name: Delegation
@@ -14,27 +14,56 @@ steps:
       inclination to participate in the frequent and often complex
       decision-making processes. These delegates are entrusted by token holders
       who willingly transfer their voting rights, empowering the delegate to act
-      on their behalf in the governance of the Arbitrum ecosystem. To become a
-      delegate, one must be elected by the community of $ARB token holders, a
-      process that reflects the trust and expectations of the electorate. Once
-      in position, delegates are not only expected to vote on proposals but also
-      to engage actively in discussions, represent the interests of their
-      constituents, and contribute to the strategic direction of Arbitrum.
+      on their behalf in the governance of the Arbitrum ecosystem. Once in
+      position, delegates are expected to vote on proposals and engage actively
+      in discussions, represent the interests of their constituents, and
+      contribute to the strategic direction of Arbitrum.
 
 
       The role of a delegate is bound by the Constitution of the Arbitrum DAO,
       which outlines the ethical and procedural guidelines to ensure that their
       actions are transparent and aligned with the collective will of the token
-      holders they represent. The Constitution ensures that the governance of
-      Arbitrum remains fair, systematic, and consistent with the community's
-      values. Token holders who delegate their votes maintain the right to
-      oversee their delegate's decisions and can withdraw their delegation at
-      any point. This mechanism ensures that delegates remain accountable to
-      their constituents, who can reclaim their direct voting power to influence
-      specific proposals that they feel strongly about.
+      holders they represent. Token holders who delegate their votes maintain
+      the right to oversee their delegate's decisions and can withdraw their
+      delegation at any point. This mechanism ensures that delegates remain
+      accountable to their constituents, who can reclaim their direct voting
+      power to influence specific proposals that they feel strongly about.
 
 
       ## Benefits of being a delegate 
+
+      Becoming a delegate within a decentralized protocol like Arbitrum offers
+      several benefits and serves an important role in the governance system:
+
+
+      **1. Representation:** Delegates serve as representatives for token
+      holders who may not have the time or desire to participate in the
+      governance process. This ensures that a broader base of interests is
+      considered in decision-making.
+
+
+      **2. Decentralization:** By allowing token holders to delegate their
+      voting power, the system becomes more decentralized. Rather than a small
+      group making all decisions, power is distributed among various delegates,
+      each representing different stakeholders.
+
+
+      **3. Active Participation:** As a delegate, you can actively participate
+      in the governance of the technology, which can be rewarding both
+      intellectually and in terms of the potential to shape the future of the
+      protocol.
+
+
+      **4. Impact:** Delegates can have a significant impact on the protocol by
+      ensuring that the values of Ethereum and the delegators are reflected in
+      the DAO’s decisions. This can affect how the protocol evolves and
+      operates.
+
+
+      **5. Community Building:** By becoming a delegate, you contribute to
+      building a strong community. Active governance participation can foster a
+      sense of ownership and collective effort among token holders.
+
 
               
     name: Introduction to Delegates
