--- a/src/guides/main/delegation-arbitrum-university-615.yaml
+++ b/src/guides/main/delegation-arbitrum-university-615.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Representatives for token holders in Arbitrum DAO
-created: '2023-11-15T11:37:36.036Z'
+created: '2023-11-15T12:11:47.839Z'
 guideType: onboarding
 key: delegation-arbitrum-university-615
 name: Delegation
@@ -94,7 +94,54 @@ steps:
         uuid: b9ea048a-8cac-40e0-a072-735bc7d3959f
         explanation: Explanation of the question
     uuid: c6007096-3c41-4b14-a191-4ff982d9bddf
-  - content: '## How to become a delegate?'
+  - content: >-
+      ## How to become a Delegate?
+
+      To become a delegate for the Arbitrum DAO, you can follow this
+      step-by-step guide:
+
+
+      ### Step 1: Understand the Role and Responsibilities
+
+      Familiarize yourself with what being a delegate entails, including the
+      expectations and responsibilities. Make sure you are ready to commit the
+      time and effort required. Study The Constitution of the Arbitrum DAO and
+      associated governance documents to understand the framework within which
+      the DAO operates.
+
+
+      ### Step 2: Build Your Delegate Platform
+
+      Complete a comprehension check to evaluate your understanding of the
+      Arbitrum DAO governance protocol. Create an online presence where you can
+      share your qualifications, experience, and vision for the Arbitrum DAO.
+      This should communicate your understanding of the protocol and the
+      community’s challenges.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/delegation_arbitrum_university_615/1700050286013_screenshot_2023-11-15%20at%205.10.29%20pm.png"/>
+      </div>
+
+
+      ### Step 3: Submit Your Application
+
+      Use the template provided in the delegate application template thread to
+      create a delegate statement. Even if applications aren't currently
+      required, this will help standardize the way community members learn about
+      potential delegates. Submit your delegate statement and any other required
+      materials according to the current guidelines provided by the Arbitrum
+      DAO.
+
+
+      ### Step 4: Engage with the Community
+
+      Join the Arbitrum DAO governance forum or Discord to ask questions,
+      express concerns, and connect with the community. Continuous engagement is
+      key to being an effective delegate. Stay updated with the latest
+      developments in the Arbitrum protocol and the broader Ethereum ecosystem.
+      Your role as a delegate involves ongoing education and active
+      participation.
     name: Becoming a Delegate
     stepItems: []
     uuid: 90bb0a3d-315a-4cf3-bd9e-3b45570f6b6f
