update guide Security Council

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -14,3 +14,4 @@ guides:
   - arbitrum-dao-arbitrum-university-613.yaml
   - arbitrum-governance-arbitrum-university-791.yaml
   - delegation-arbitrum-university-615.yaml
+  - security-council-arbitrum-university-100.yaml
