--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -15,3 +15,4 @@ guides:
   - arbitrum-governance-arbitrum-university-791.yaml
   - delegation-arbitrum-university-615.yaml
   - security-council-arbitrum-university-100.yaml
+  - voting-on-dao-proposals-arbitrum-university-711.yaml
