--- a/src/guides/main/voting-on-dao-proposals-arbitrum-university-711.yaml
+++ b/src/guides/main/voting-on-dao-proposals-arbitrum-university-711.yaml
@@ -1,16 +1,53 @@
 categories: []
 content: Understanding the importance of DAO Voting
-created: '2023-11-15T14:30:09.453Z'
+created: '2023-11-15T16:06:50.886Z'
 guideType: onboarding
 key: voting-on-dao-proposals-arbitrum-university-711
 name: Voting on DAO Proposals
 publishStatus: Live
 steps:
-  - content: |-
-      ## What is the need for voting?
+  - content: >-
+      ## Voting in Arbitrum DAO
+
+      Voting in the Arbitrum DAO represents a critical function in the
+      decentralized decision-making process. It is the means by which $ARB
+      governance token holders can have their say in the direction of the DAO's
+      actions, from proposing amendments to the DAO's Constitution to deciding
+      on the allocation of funds for various projects. This democratic approach
+      is fundamental to the decentralized ethos that underpins the Arbitrum
+      ecosystem, ensuring that all decisions reflect the collective will of the
+      community rather than the desires of a centralized authority.
 
 
-      ## Types of Voting
+      ## Importance of Voting
+
+      The necessity of voting lies in several key areas:
+
+
+      1. **Decentralization**: Voting is the cornerstone of decentralized
+      governance. By enabling token holders to vote on proposals, the DAO
+      ensures that the power dynamics remain balanced and distributed across its
+      member base, rather than being concentrated in the hands of a few.
+
+
+      2. **Consensus Building**: The voting process facilitates a fair and
+      transparent method for reaching consensus on important issues. It allows
+      for diverse opinions to be heard and considered, ultimately leading to
+      decisions that are in the best interest of the entire DAO and its
+      underlying technologies.
+
+
+      3. **Responsiveness**: Voting ensures that the DAO can respond swiftly to
+      new developments and challenges. As the needs and priorities of the DAO
+      evolve, voting allows for the agile adaptation of strategies and the
+      implementation of new initiatives.
+
+
+      4. **Engagement and Ownership**: By participating in votes, members are
+      actively engaging with the DAO's governance. This not only fosters a sense
+      of community but also gives members a sense of ownership over the DAO's
+      future, as they are directly involved in shaping it.
+
 
               
     name: Introduction to Voting
@@ -41,7 +78,42 @@ steps:
         uuid: 81ad1b10-337e-4c66-8fea-0b58908ea31a
         explanation: Explanation of the question
     uuid: 205607f8-42bd-4452-9242-cc6483b29a41
-  - content: ''
+  - content: >
+      The voting power of an individual is proportional to the number of $ARB
+      tokens they possess. When casting votes, members are encouraged to assess
+      proposals based on these values, ensuring that decisions align with the
+      DAO's overarching goals. In the Arbitrum DAO, the voting process is
+      designed to facilitate community-driven governance through four distinct
+      types of votes:
+
+
+      ### Temperature Check
+
+      A temperature check is an initial voting step within the Arbitrum DAO
+      designed to measure community interest in a proposed idea or action before
+      it advances through the governance process. This preliminary assessment is
+      conducted on the Snapshot platform, a decentralized voting interface. To
+      participate in a temperature check, $ARB token holders must possess or
+      represent at least 0.01% of the total votable tokens. The purpose of this
+      step is to ensure that the community sufficiently supports a proposal
+      before dedicating more resources to further discussion and voting. It acts
+      as a community pulse-taking measure, enabling the DAO to filter out
+      proposals that lack substantial backing, thus streamlining the governance
+      process to focus on initiatives with broader interest.
+
+
+      ### On-chain Vote
+
+      An on-chain vote in the Arbitrum DAO occurs after a proposal passes the
+      preliminary temperature check. This vote is conducted on the blockchain
+      via Tally, a governance platform, and can only be initiated by $ARB token
+      holders with at least 1,000,000 votable tokens. For a proposal to pass, it
+      must receive affirmative votes from more than 50% of the voting
+      participants. Additionally, constitutional changes require support from at
+      least 5% of all tokens, while non-constitutional changes need 3%. These
+      specifics ensure that only proposals with substantial community backing
+      are ratified, reflecting the DAO's commitment to a democratic and
+      transparent decision-making process.
     name: 'Voting Mechanisms '
     stepItems: []
     uuid: 9cabd4b9-d7d1-4d22-a859-af1a1c60c6c1
@@ -63,6 +135,6 @@ steps:
     uuid: a488ccbe-7cf7-4aa0-911d-53d2c95048d7
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 010de07e-584f-4e14-96ae-f5f2c70e6e0e
+uuid: voting-on-dao-proposals-arbitrum-university-711
 version: 1
 priority: 50
