--- a/src/guides/main/security-council-arbitrum-university-100.yaml
+++ b/src/guides/main/security-council-arbitrum-university-100.yaml
@@ -1,12 +1,12 @@
 categories: []
 content: A setp to ensure network integrity!
-created: '2023-11-15T17:54:37.218Z'
+created: '2023-11-15T18:12:34.823Z'
 guideType: onboarding
 key: security-council-arbitrum-university-100
 name: Security Council
 publishStatus: Live
 steps:
-  - content: >-
+  - content: >
       ## What is Security Council
 
       The Security Council, as established by the Constitution of the Arbitrum
@@ -35,6 +35,59 @@ steps:
 
       3. **Community Protection:** Ensuring the welfare of the DAO and the wider
       Arbitrum community.
+
+
+      ## Current Security Council 
+
+      It is essential to be informed of the members of the security council as
+      it enhances the trust in the DAOs governance.
+
+
+      ### September Cohort 
+
+      The following people were elected as the members of the security council
+      during the September cohort:
+
+
+      | Name            | Adress                                     |
+
+      |-----------------|--------------------------------------------|
+
+      | 0xhombre        | 0xb71ca4ffbb7b58d75ba29891ab45e9dc12b444ed |
+
+      | Matt Fiebach    | 0x3bd8e2ac65ad6f0f094ba6766cbd9484ab49ef23 |
+
+      | Harry Kalodner  | 0xf8e1492255d9428c2Fc20A98A1DeB1215C8ffEfd |
+
+      | Patrick McCorry | 0x8f10e3413586c4a8dcfce19d009872b19e9cd8e3 |
+
+      | John Morrow     | 0x3e286452b1c66abb08eb5494c3894f40ab5a59af |
+
+      | Omer            | 0xb07dc9103328a51128bc6cc1049d1137035f5e28 |
+
+
+
+      ### March Cohort 
+
+      The following people were elected as the members of the security council
+      during the March cohort:
+
+
+      | Name                | Adress                                     |
+
+      |---------------------|--------------------------------------------|
+
+      | Rachel Bousfield    | 0x5A1FD562271aAC2Dadb51BAAb7760b949D9D81dF |
+
+      | Justin Drake        | 0x5280406912EB8Ec677Df66C326BE48f938DC2e44 |
+
+      | Bartek Kiepuszewski | 0x0275b3D54a5dDbf8205A75984796eFE8b7357Bae |
+
+      | Patrick McNab       | 0x566a07C3c932aE6AF74d77c29e5c30D8B1853710 |
+
+      | Yoav Weiss          | 0x475816ca2a31D601B4e336f5c2418A67978aBf09 |
+
+      | Patricio Worthalter | 0xf6B6F07862A02C85628B3A9688beae07fEA9C863 |
     name: Introduction to Security Council
     stepItems: []
     uuid: 062237b2-8d19-4899-8143-dd0f632bcbf4
