update guide Submitting a DAO proposal

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -16,3 +16,4 @@ guides:
   - delegation-arbitrum-university-615.yaml
   - security-council-arbitrum-university-100.yaml
   - voting-on-dao-proposals-arbitrum-university-711.yaml
+  - submitting-a-dao-proposal-arbitrum-university-385.yaml
