update guide Security Council

--- a/src/guides/main/security-council-arbitrum-university-100.yaml
+++ b/src/guides/main/security-council-arbitrum-university-100.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A setp to ensure network integrity!
-created: '2023-11-15T18:12:34.823Z'
+created: '2023-11-16T12:21:59.332Z'
 guideType: onboarding
 key: security-council-arbitrum-university-100
 name: Security Council
@@ -43,7 +43,7 @@ steps:
       it enhances the trust in the DAOs governance.
 
 
-      ### September Cohort 
+      ### September 2023 Cohort 
 
       The following people were elected as the members of the security council
       during the September cohort:
@@ -67,7 +67,7 @@ steps:
 
 
 
-      ### March Cohort 
+      ### March 2023 Cohort 
 
       The following people were elected as the members of the security council
       during the March cohort:
