--- a/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
+++ b/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
@@ -1,22 +1,24 @@
 categories: []
 content: Learn how to submit proposals in Arbitrum DAO
-created: '2023-11-16T12:20:37.333Z'
+created: '2023-11-16T12:29:13.844Z'
 guideType: onboarding
 key: submitting-a-dao-proposal-arbitrum-university-385
 name: Submitting a DAO proposal
 publishStatus: Live
 steps:
   - content: |-
-      Submitting a DAO proposal
-      Prerequisites
-      Format of Proposal
-      Procedure of Submission
-      Resubmission process
-    name: Introduction
+      ## Why Submit Proposal?
+
+
+      ## Types of Proposals 
+
+
+      ## Prerequisites
+    name: 'DAO Proposals '
     stepItems: []
     uuid: 4d7fd5b4-b9b4-4457-88f5-491ae73f4e4c
   - content: ''
-    name: Introduction Evaluation
+    name: Evaluation
     stepItems:
       - label: Full Name
         required: false
@@ -40,8 +42,32 @@ steps:
         uuid: f0469887-d474-4fe2-b286-ec9154284894
         explanation: Explanation of the question
     uuid: 4a07e553-f4d5-4735-8aa9-b2a07f967c5a
+  - content: '## How to Structure the Proposal?'
+    name: 'Proposal Structure '
+    stepItems: []
+    uuid: e874df3d-4d99-43fd-a236-1d9e72ec54c1
+  - content: ''
+    name: Evaluation
+    stepItems: []
+    uuid: 205472c5-46cf-40b6-a8dc-8c47aef16c3a
+  - content: '## How to submit the proposal?'
+    name: 'Submitting Proposals '
+    stepItems: []
+    uuid: a661e58d-8d66-4606-b545-3037c3675a9b
+  - content: ''
+    name: Evaluation
+    stepItems: []
+    uuid: c821f543-03a5-40c5-8407-7a128dc2353f
+  - content: '## How to resubmit a DAO proposal?'
+    name: Re-Submitting the proposal
+    stepItems: []
+    uuid: de89e6dd-8634-4a00-b3a0-53be9f9f34dd
+  - content: ''
+    name: Evaluation
+    stepItems: []
+    uuid: 3ab9244f-d520-475e-ac74-1b50af01cc37
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 2d1d895c-d0c0-41cd-8e71-17ef617f7fa5
+uuid: submitting-a-dao-proposal-arbitrum-university-385
 version: 1
 priority: 50
