update guide Submitting a DAO proposal

--- a/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
+++ b/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
@@ -1,16 +1,28 @@
 categories: []
 content: Learn how to submit proposals in Arbitrum DAO
-created: '2023-11-16T12:29:13.844Z'
+created: '2023-11-16T12:49:13.201Z'
 guideType: onboarding
 key: submitting-a-dao-proposal-arbitrum-university-385
 name: Submitting a DAO proposal
 publishStatus: Live
 steps:
-  - content: |-
+  - content: >-
       ## Why Submit Proposal?
+
+      A DAO proposal is a formalized suggestion put forward by a member of a
+      Decentralized Autonomous Organization (DAO), which is a community-led
+      entity with no central authority, to make changes or take specific actions
+      within the organization's ecosystem. The need for such proposals arises
+      from the democratic nature of DAOs, where collective decision-making is
+      fundamental. Proposals enable innovation, improvements, and community
+      consensus on the evolution of the protocol or organization. They are
+      essential for the transparent and equitable governance of blockchain-based
+      projects, allowing stakeholders to vote and decide on the deployment of
+      shared resources and strategic directions.
 
 
       ## Types of Proposals 
+
 
 
       ## Prerequisites
