--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -17,3 +17,4 @@ guides:
   - security-council-arbitrum-university-100.yaml
   - voting-on-dao-proposals-arbitrum-university-711.yaml
   - submitting-a-dao-proposal-arbitrum-university-385.yaml
+  - foundation-grants-arbitrum-university-884.yaml
